--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,8 @@
 /bazel-out
 
 # dependencies
-/node_modules
-package-lock.json
-/node_modules
-/math/node_modules/*
-/math/package-lock.json
-/angular-ngrx-course
-/angular-ngrx-course/*
-
+**/node_modules/
+**/package-lock.json
 
 # profiling files
 chrome-profiler-events.json
